fixed footer not centered

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,9 +7,6 @@
   justify-content: space-between;
   min-width: calc(60px-140px);
   bottom: 0;
-  left: 0;
-  /* width: 50vh; */
-
   width: 52vh;
   height: 52px;
   padding: 0px 50px;
